syntax = "proto3";

package com.manifoldfinance.protobuf.config;

option java_multiple_files = true;
option cc_enable_arenas = true;

enum SystemConfigId {
  CONFIG_MINER_RELAY = 0;
}

message SystemConfig {
  SystemConfigId key = 1;
  string value = 2; // JSON encoded from db
  string validity = 3;

  oneof config {
    MinerRelaySystemConfig miner_relay_system_config = 10;
  }
}

enum BundleSourceId {
  BATCH_BUNDLER = 0;
  KDB = 1;
}

message MinerRelaySystemConfig {
  bool bundle_relay_disabled = 1;
  BundleSourceId allowed_bundle_source_id = 2;
}

message MarketContract {
  string id = 1;
  string name = 2;
  string contractAddress = 3; // hex encoded
  string factoryAddress = 4; // hex encoded
  string codeHash = 5; // hex encoded
}

message Miner {
  string id = 1;
  string url = 2;
  string bribeAddress = 3;
  string validity = 4;
}

message SenderDeny {
  string signer = 1;
  string reason = 2;
  string validity = 3;
}

message SignerDeny {
  string sender = 1;
  string reason = 2;
  string validity = 3;
}

message SignerAllow {
  string sender = 1;
  string reason = 2;
  string validity = 3;
}

message PlatformAccount {
  string address = 1;
  string name = 2;
  bool isActive = 3;
  string validity = 4;

  // Another account address that will be used as the source of balance updates. Useful for local dev and testing
  optional string alias_of = 5;
}

message PlatformToken {
  string address = 1;
  string name = 2;
  bool isActive = 3;
  string validity = 4;
}

message SushiLiquidityPair {
  int64 id = 1;
  string address = 2;
  string base_address = 3;
  string base_symbol = 4;
  int32 base_decimals = 5;
  string quote_address = 6;
  string quote_symbol = 7;
  int32 quote_decimals = 8;
  bool isActive = 9;
  string validity = 10;
}

message UniLiquidityPair {
  int64 id = 1;
  string address = 2;
  string base_address = 3;
  string base_symbol = 4;
  int32 base_decimals = 5;
  string quote_address = 6;
  string quote_symbol = 7;
  int32 quote_decimals = 8;
  bool isActive = 9;
  string validity = 10;
}
