// Original file: proto/config.proto


export interface MarketContract {
  'id'?: (string);
  'name'?: (string);
  'contractAddress'?: (string);
  'factoryAddress'?: (string);
  'codeHash'?: (string);
}

export interface MarketContract__Output {
  'id': (string);
  'name': (string);
  'contractAddress': (string);
  'factoryAddress': (string);
  'codeHash': (string);
}
